kubernetes/namespace-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
